src/snapshots/heave__tests__petstore@getOrderById_400.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/getOrderById_400.hurl
---
GET {{ baseurl }}/store/order/{{orderId}}
Authorization: Bearer {{ authorization }}
Prefer: code=400

HTTP 400

