src/snapshots/heave__tests__petstore@getPetById_200.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/getPetById_200.hurl
---
GET {{ baseurl }}/pet/{{petId}}
Authorization: Bearer {{ authorization }}
Prefer: code=200

HTTP 200

[Asserts]
jsonpath "$" isCollection
#jsonpath "$.category" isCollection
#jsonpath "$.category.id" isInteger
#jsonpath "$.category.name" isString
#jsonpath "$.id" isInteger
jsonpath "$.name" isString
jsonpath "$.photoUrls" isCollection
#jsonpath "$.photoUrls[0]" isString
#jsonpath "$.status" isString
#jsonpath "$.tags" isCollection
#jsonpath "$.tags[0]" isCollection
#jsonpath "$.tags[0].id" isInteger
#jsonpath "$.tags[0].name" isString
