src/snapshots/heave__tests__petstore@getPetById_404.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/getPetById_404.hurl
---
GET {{ baseurl }}/pet/{{petId}}
Authorization: Bearer {{ authorization }}
Prefer: code=404

HTTP 404

