src/snapshots/heave__tests__petstore@getUserByName_400.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/getUserByName_400.hurl
---
GET {{ baseurl }}/user/{{username}}
Authorization: Bearer {{ authorization }}
Prefer: code=400

HTTP 400

