src/snapshots/heave__tests__petstore@getUserByName_404.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/getUserByName_404.hurl
---
GET {{ baseurl }}/user/{{username}}
Authorization: Bearer {{ authorization }}
Prefer: code=404

HTTP 404

