src/snapshots/heave__tests__petstore@loginUser_400.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/loginUser_400.hurl
---
GET {{ baseurl }}/user/login
Authorization: Bearer {{ authorization }}
Prefer: code=400

[QueryStringParams]
username:
password:


HTTP 400

