src/snapshots/heave__tests__petstore@placeOrder_405.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/placeOrder_405.hurl
---
POST {{ baseurl }}/store/order
Authorization: Bearer {{ authorization }}
Prefer: code=405
{
  "complete": false,
  "id": 0,
  "petId": 0,
  "quantity": 0,
  "shipDate": "",
  "status": ""
}
HTTP 405

